fixed dropdown menu from showing up behind the camera when in use

--- a/eatsafe/src/components/ButtonStyle.css
+++ b/eatsafe/src/components/ButtonStyle.css
@@ -28,7 +28,7 @@
   border-radius: 10px;
   cursor: pointer;
   width: 95px;
-  height: 40px;
+  height: 38px;
   font-size: 15px;
   justify-content: center;
 }
